# PyKotor

./: .cursorrules  .env  .gitignore  .gitmodules  .tmp_ndix_8x8.tpc  .tmp_ndix_N_BelHd.tpc  .tmp_pykotor_N_BelHd.tpc  .tmp_pykotor_N_BelHd_fixed.tpc  AGENTS.md  CONTRIBUTING.md  CONVENTIONS.md  DOCUMENTATION_INDEX.md  README.md  _wiki_src_io_lip_HEAD.py  bwm_mdl_lyt_kotormax_context.md  out.diagram  out.wok  pyproject.toml  requirements-dev-exp.txt  requirements-dev.txt  resolve_conflicts.py  tmp_mirror_audit.py  tmp_wiki_audit.py  tool_metadata.py
.github/: FUNDING.yml  (+3 more)
Libraries/PyKotor/: CLI_COMMANDS_REFERENCE.md  CLI_QUICKSTART.md  CLI_README.md  README.md  pyproject.toml  setup.py
Libraries/PyKotor/Game Engine/: pyproject.toml
Libraries/PyKotor/docs/: GFF_DIFF_SEMANTICS.md
Libraries/PyKotor/src/loggerplus/: __init__.py
Libraries/PyKotor/src/pykotor/: __init__.py
Libraries/PyKotor/src/pykotor/cli/: argparser.py  cfg_parser.py  dispatch.py  gui_converter.py  indoor_builder.py  kit_generator.py
Libraries/PyKotor/src/pykotor/common/: geometry_utils.py  indoorkit.py  indoormap.py  language.py  misc.py  module.py  modulekit.py  pathfinding.py  script.py  scriptdefs.py
Libraries/PyKotor/src/pykotor/diff_tool/: app.py  cli.py  cli_utils.py  differ.py  merge.py
Libraries/PyKotor/src/pykotor/engine/: README.md  core.py
Libraries/PyKotor/src/pykotor/extract/: bzf.py  capsule.py  chitin.py  file.py  installation.py  keyfile.py  keywriter.py  path_source.py  savedata.py  talktable.py  twoda.py
Libraries/PyKotor/src/pykotor/font/: draw.py  grid.py
Libraries/PyKotor/src/pykotor/gl/: __init__.py  compat.py  glm_compat.py
Libraries/PyKotor/src/pykotor/kaitai_generated/: gff_json.py  gff_xml.py  itp_xml.py  lip_json.py  lip_xml.py  lyt.py  mdl_ascii.py  ncs_minimal.py  nss.py  ssf_xml.py  tlk_json.py  tlk_xml.py  twoda_csv.py  twoda_json.py  txi.py  vis.py
Libraries/PyKotor/src/pykotor/resource/: bioware_archive.py  gff_dispatch.py  resource_auto.py  salvage.py  type.py
Libraries/PyKotor/src/pykotor/tools/: archive_serializer.py  archives.py  conversions.py  create_installation.py  creature.py  door.py  heuristics.py  indoorkit.py  indoormap.py  kit.py  model.py  module.py  patching.py  path.py  placeable.py  reference_cache.py  reference_finder.py  resource_json.py  resources.py  scripts.py  texture_batch.py  utilities.py  validation.py  walkmesh_render.py  walkmesh_render_ascii.py
Libraries/PyKotor/src/pykotor/tslpatcher/: config.py  logger.py  patcher.py  reader.py  uninstall.py  writer.py
Libraries/PyKotor/src/utility/: fonts.py  misc.py  string_util.py
Libraries/PyKotor/src/utility/common/: geometry.py  stream.py
Libraries/PyKotor/src/utility/updater/: downloader.py  github.py  restarter.py  update.py
Libraries/PyKotor/tests/: conftest.py  test_markdown_validation.py
Libraries/PyKotor/tests/cli/: conftest.py  test_diff_command.py  test_diff_comprehensive.py  test_indoor_roundtrip.py  test_json_commands.py  test_walkmesh_rebuild.py
Libraries/PyKotor/tests/common/: linux_case_insensitive_helpers.py  test_case_aware_path.py  test_consumer_manager.py  test_decode_fallbacks.py  test_geometry.py  test_get_case_sensitive_path.py  test_path_extras.py  test_path_mixed_slash_handling.py  test_wrapped_case_insens_str.py  test_wrapped_str.py  test_wrapped_str2.py  validate_case_sensitivity.py
Libraries/PyKotor/tests/extract/: test_installation.py  test_talktable.py  test_textures.py
Libraries/PyKotor/tests/font/: test_txi_tga_font.py
Libraries/PyKotor/tests/gl/: bench_round4.py  bench_round5.py  bench_round6.py  test_async_loader_texture_txi_none.py  test_camera_controller.py  test_frustum_culling.py  test_gl_accel.py  test_mdl_mesh_alpha_modes.py
Libraries/PyKotor/tests/resource/: test_gff_dispatch.py  test_resource_from_path.py
Libraries/PyKotor/tests/resource/formats/: conftest.py  pytest_gff_convert_installations.py  pytest_ncs_compile_installation.py  test_bif.py  test_bwm.py  test_dds.py  test_erf.py  test_gff.py  test_gff_list_compare.py  test_key.py  test_lip.py  test_lyt.py  test_mdl.py  test_mdl_ascii.py  test_model_parsers_against_mdlops.py  test_ncs.py  test_rim.py  test_ssf.py  test_tlk.py  test_tpc.py  test_twoda.py  test_txi_data.py  test_txi_io.py  test_vis.py  test_wav.py  test_wok.py
Libraries/PyKotor/tests/resource/generics/: test_are.py  test_dlg.py  test_fac.py  test_git.py  test_gui.py  test_ifo.py  test_jrl.py  test_pth.py  test_utc.py  test_utd.py  test_utp.py  test_uts.py
Libraries/PyKotor/tests/test_engine/: test_gui.py
Libraries/PyKotor/tests/test_helpers/: profiling_and_timeout.py
Libraries/PyKotor/tests/test_utility/: conftest.py  test_actions_dispatcher.py  test_drag_drop_conformance.py  test_dynamic_view.py  test_file_dialog_components.py  test_filesystem_components.py  test_fluent_design_conformance.py  test_keyboard_accessibility_conformance.py  test_local_verify_checkpoint.py  test_pixel_perfect_layout.py  test_pyfileinfogatherer.py  test_qfiledialog.py  test_qfiledialog2.py  test_qfiledialog_smoke.py  test_qfiledialogextended_comprehensive.py  test_visual_layout_conformance.py  test_windows_explorer_conformance.py
Libraries/PyKotor/tests/tslpatcher/: README.md  reference_changes.ini  test_memory.py  test_reader.py  test_tslpatcher.py
(+1020 files in other folders)
